changing elements as i need them

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="top-section">
                 <div class="day">
                     <label for="day">DAY</label>
-                    <input type="text" id="day" name="day" placeholder="DD" />
+                    <input type="text" id="day" class="input" name="day" placeholder="DD" />
                 </div>
 
                 <div class="month">
@@ -31,6 +31,7 @@
                     <input
                         type="text"
                         id="month"
+                        class="input"
                         name="month"
                         placeholder="MM"
                     />
@@ -41,6 +42,7 @@
                     <input
                         type="text"
                         id="year"
+                        class="input"
                         name="year"
                         placeholder="YYYY"
                     />
@@ -55,8 +57,8 @@
            
             <div class="current">
               <div class="currentYear">
-                  <div class="currentYearData"><i><strong>- -</div>
-                    <div>years</i></strong></div>
+                  <div class="currentYearData">- -</div>
+                    <div>years</div>
               </div>
 
               <div class="currentMonth">
@@ -79,5 +81,6 @@
                 >Frontend Mentor</a
             >. Coded by <a href="#">Your Name Here</a>.
         </div>
+        <script src="main.js"></script>
     </body>
 </html>
