changing elements as needed

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <div class="top-section">
                 <div class="day">
                     <label for="day">DAY</label>
-                    <input type="number" 
-                        id="day" 
+                    <input type="text" 
+                        id="userDay" 
                         class="input" 
                         name="day" 
                         placeholder="DD" />
@@ -34,7 +34,7 @@
                     <label for="month">MONTH</label>
                     <input
                         type="text"
-                        id="month"
+                        id="userMonth"
                         class="input"
                         name="month"
                         placeholder="MM"
