--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <div class="top-section">
                 <form id="form" action="" class="form">
                     <div class="day">
-                        <label for="day">DAY</label>
+                        <label id="day1" for="day">DAY</label>
                         <input type="text" 
                             id="userDay" 
-                            class="input" 
+                            class="input1" 
                             name="day" 
                             placeholder="DD" 
                             maxlength="2" 
@@ -35,11 +35,11 @@
                     </div>
 
                     <div class="month">
-                        <label for="month">MONTH</label>
+                        <label id="month1" for="month">MONTH</label>
                         <input
                             type="text"
                             id="userMonth"
-                            class="input"
+                            class="input2"
                             name="month"
                             placeholder="MM"
                             maxlength="2" 
@@ -49,11 +49,11 @@
                     </div>
 
                     <div class="year">
-                        <label for="year">YEAR</label>
+                        <label id="year1" for="year">YEAR</label>
                         <input
                             type="text"
                             id="userYear"
-                            class="input"
+                            class="input3"
                             name="year"
                             placeholder="YYYY"
                             maxlength="4" 
