html is complete for this project

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             href="./assets/images/favicon-32x32.png"
         />
         <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="style2.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Climate+Crisis&family=Indie+Flower&family=Montserrat&family=Poppins:ital,wght@0,400;1,900&family=Sacramento&display=swap" rel="stylesheet">
@@ -94,7 +95,7 @@
                 href="https://www.frontendmentor.io?ref=challenge"
                 target="_blank"
                 >Frontend Mentor</a
-            >. Coded by <a href="#">Your Name Here</a>.
+            >. Coded by <a href="https://www.linkedin.com/in/jake-moretz-450668255/">Jake Moretz</a>.
         </div>
         <script src="main.js"></script>
     </body>
