changed the colorway

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             placeholder="DD" 
                             maxlength="2" 
                             required/>
-                            <span class="dayError" style="color: red;"></span>
+                            <span class="dayError" style="color: rgb(196, 59, 59);"></span>
                     </div>
 
                     <div class="month">
@@ -45,7 +45,7 @@
                             placeholder="MM"
                             maxlength="2" 
                             required />
-                            <span class="monthError" style="color: red;"></span>
+                            <span class="monthError" style="color: rgb(196, 59, 59);"></span>
                         
                     </div>
 
@@ -59,7 +59,7 @@
                             placeholder="YYYY"
                             maxlength="4" 
                             required/>
-                            <span class="yearError" style="color: red;"></span>
+                            <span class="yearError" style="color: rgb(196, 59, 59);"></span>
                     </div>
                 </form>
             </div>
